...
    
    var body: some View {
        ZStack {
            Text("$\(choiceTimeLeft)")
                .padding(16)
                .opacity(gameState == .choosing ? 1 : 0)
                .accessibilityIdentifier("ChoiceTimer")
            
            GlowingButton(
                shape: .circle,
                glowColor: Color(UIColor.systemBackground),
                action: { Task { @MainActor in await onSpin() }}
            ) {
...
                    .animation(.easeOut(duration: 0.25), value: gameState)
            }
            .id(gameState == .choosing)
            .buttonStyle(.bordered)
            .opacity([.initial, .correct, .spinning].contains(gameState) ? 1 : 0)
            .disabled(gameState == .spinning)
            .accessibilityIdentifier("SpinButton")
        }
        .background(.tertiary.shadow(.inner(color: .black, radius: 4)))
        .background(in: .circle)
        .foregroundStyle(.primary)
    }
}
...
